# my-llm-bot

./: .dockerignore  .env.example  .gitignore  .pr_agent.toml  Dockerfile  README.md  bot.py  docker-compose.yml  get_slack_emoji.py  hello_bot.py  openai_module.py  pyproject.toml
.github/workflows/: ci.yaml  lint.yaml  pr-agent.yml
src/: bot.py  get_slack_emoji.py  hello_bot.py
src/utils/: constants.py  csv.py  openai_utils.py  slack_utils.py
utils/: constants.py  csv.py  openai_module.py  openai_utils.py
