[tool.poetry]
name = "my-llm-apps"
version = "0.1.0"
description = ""
authors = ["Junya Nakazato <nakazato_junya@ca-adv.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
slack-bolt = "^1.18.1"
load-dotenv = "^0.1.0"
openai = "^1.12.0"
langchain = "^0.1.8"
langchain-openai = "^0.0.6"
slack-sdk = "^3.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
